@@ -24,10 +24,7 @@
 
 #include <Eris/Entity.h>
 #include <Eris/View.h>
-// #include <Eris/PollDefault.h>
-// #include <Eris/Log.h>
 #include <Eris/TypeInfo.h>
-// #include <Eris/Connection.h>
 
 #include "services/server/ServerService.h"
 #include "services/EmberServices.h"
@@ -36,7 +33,6 @@
 #include "EmberEntity.h"
 #include "WorldEmberEntity.h"
 #include "EmberPhysicalEntity.h"
-//#include "PersonEmberEntity.h"
 #include "AvatarEmberEntity.h"
 #include "EmberOgre.h"
 
@@ -64,7 +60,6 @@ EmberEntityFactory::EmberEntityFactory(TerrainGenerator* terrainGenerator, Eris:
 {
 	mTerrainType = mTypeService->getTypeByName("world");
 	Ember::ServerService* serverService = Ember::EmberServices::getSingletonPtr()->getServerService();
-	loadTypeInfo();
 	
 	serverService->GotAvatar.connect(sigc::mem_fun(*this, &EmberEntityFactory::setAvatar));
 	
@@ -98,7 +93,7 @@ Eris::Entity* EmberEntityFactory::instantiate(const Atlas::Objects::Entity::Root
     } else if (!isPhysical) {
     	S_LOG_VERBOSE("Creating immaterial entity.");
 
-    	//we don't want this to have any Ogre::Entity
+    	///we don't want this to have any Ogre::Entity
 		emberEntity = new EmberEntity(ge->getId(), type, w, EmberOgre::getSingleton().getSceneManager());
 
     } else if (type->isA(mTerrainType)) {
@@ -115,32 +110,7 @@ Eris::Entity* EmberEntityFactory::instantiate(const Atlas::Objects::Entity::Root
 	return emberEntity;
 }
 
-AvatarEmberEntity* EmberEntityFactory::createAvatarEntity(const Atlas::Objects::Entity::RootEntity &ge, Eris::TypeInfo* type, Eris::View *world)
-{
-	Ogre::String id = ge->getId();
-	id += "_scaleNode";
-	Ogre::SceneNode* scaleNode = static_cast<Ogre::SceneNode*>(EmberOgre::getSingleton().getSceneManager()->createSceneNode (id));
-	Model::Model* model = new Model::Model(ge->getId());
-	model->create("settler");
-/*	Model* model = Model::Create("settler.modeldef.xml", );*/
-	//Model* model = new Model(mSceneManager, ge->getId());
-	
-	//rotate node to fit with WF space
-	//perhaps this is something to put in the model spec instead?
-	scaleNode->rotate(Ogre::Vector3::UNIT_Y,(Ogre::Degree)90);
-	
-//	model->createFromXML("modeldefinitions/settler.modeldef.xml");
-	
-//	Ogre::Entity* ogreEntity = mSceneManager->createEntity(ge.getId(), "robot.mesh");
-//	mAnimStateWalk = model->getAnimationState("walk");	
-//	MotionManager::getSingleton().addAnimation(mAnimStateWalk);
 
-	// attach the node to the entity
-	scaleNode->attachObject(model);
-    	
-    return new AvatarEmberEntity(ge->getId(), type, world,EmberOgre::getSingleton().getSceneManager(), scaleNode, mAvatar);
-	
-}
 
 /// Accept is called by the world to test if this factory can instantiate the specified object
 /** Accept is called when an entity must be constructed; this will be called every time
@@ -198,70 +168,56 @@ void EmberEntityFactory::buildTerrainAroundAvatar()
 */
 }
 
+Ogre::SceneNode* SetupEntityNodesAndModel(const std::string& id, const std::string& entityType) 
+{
+//	Ogre::Vector3 scaler = Ogre::Vector3::UNIT_SCALE;
+	Ogre::SceneNode* scaleNode = static_cast<Ogre::SceneNode*>(EmberOgre::getSingleton().getSceneManager()->createSceneNode (id + "_scaleNode"));
+
+	
+	Model::Model* model = new Model::Model(id);
+	bool result = model->create(entityType);
+
+	///try to open the model definition file
+	if (!result) 
+	{
+		S_LOG_FAILURE( "Could not find " << entityType << ", using placeholder.");
+		result = model->create("placeholder");
+		assert(result); ///if this fails we don't even have the placeholder and something is very wrong
+	} 
+	///rotate node to fit with WF space
+	///perhaps this is something to put in the model spec instead?
+	scaleNode->rotate(Ogre::Vector3::UNIT_Y,(Ogre::Degree)90);
+	
+	scaleNode->attachObject(model);
+	return scaleNode;
+
+}
+
 
 
 EmberPhysicalEntity* EmberEntityFactory::createPhysicalEntity(const Atlas::Objects::Entity::RootEntity &ge,Eris::TypeInfo* type, Eris::View *world) {
 	
-	Ogre::Vector3 scaler = Ogre::Vector3::UNIT_SCALE;
-	Ogre::String id = ge->getId();
-	id += "_scaleNode";
-	Ogre::SceneNode* scaleNode = static_cast<Ogre::SceneNode*>(EmberOgre::getSingleton().getSceneManager()->createSceneNode (id));
-	//mScaleNode->setInheritScale(false);
-	//mScaleNode->setScale(Ogre::Vector3(0.01,0.01,0.01));	
-	//scaleNode->showBoundingBox(true);
+	const std::string& typeName = mTypeService->getTypeForAtlas(ge)->getName();
 
-	std::string typeName = mTypeService->getTypeForAtlas(ge)->getName();
-	
-	Model::Model* model = new Model::Model(ge->getId());
-	bool result = model->create(typeName);
-
-	//try to open the model definition file
-	if (!result) 
-	{
-		S_LOG_FAILURE( "Could not find " << typeName << ", using placeholder.");
-		result = model->create("placeholder");
-		assert(result); //if this fails we don't even have the placeholder and something is very wrong
-	} 
-	//rotate node to fit with WF space
-	//perhaps this is something to put in the model spec instead?
-	scaleNode->rotate(Ogre::Vector3::UNIT_Y,(Ogre::Degree)90);
-	
-	scaleNode->attachObject(model);
-
+	Ogre::SceneNode* scaleNode = SetupEntityNodesAndModel(ge->getId(), typeName);
 	EmberPhysicalEntity* entity;
-/*	if (mPersonSet.find(typeName) != mPersonSet.end()) {
-		entity = new PersonEmberEntity(ge->getId(), type,  world, EmberOgre::getSingleton().getSceneManager(), scaleNode);
-	} else {*/
-		entity = new EmberPhysicalEntity(ge->getId(), type, world, EmberOgre::getSingleton().getSceneManager(), scaleNode);
-// 	}
+	
+	entity = new EmberPhysicalEntity(ge->getId(), type, world, EmberOgre::getSingleton().getSceneManager(), scaleNode);
+	
 	return entity;
 	
 	
 }
 
-
-void EmberEntityFactory::loadTypeInfo()
+AvatarEmberEntity* EmberEntityFactory::createAvatarEntity(const Atlas::Objects::Entity::RootEntity &ge, Eris::TypeInfo* type, Eris::View *world)
 {
-//TODO: put this in a separate xml file or something
+	const std::string& typeName = mTypeService->getTypeForAtlas(ge)->getName();
 
-// 	mPersonSet.insert("settler");
-// 	mPersonSet.insert("merchant");
-// 	mPersonSet.insert("mercenary");
-// 	mPersonSet.insert("butcher");
-// 	mPersonSet.insert("marshall");
-// 	
-
-		
+	Ogre::SceneNode* scaleNode = SetupEntityNodesAndModel(ge->getId(), typeName);
+    	
+    return new AvatarEmberEntity(ge->getId(), type, world,EmberOgre::getSingleton().getSceneManager(), scaleNode, mAvatar);
+	
 }
-
-
-
-
-
-
-
-
-
 
 /** retrieve this factory's priority level; higher priority factories
 get first chance to process a recieved Atlas entity. The default implementation
